# simplang

./: .gitattributes  .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/antlr/net/rishvic/simplang/antlr/: SimpLang.g4
app/src/main/java/net/rishvic/simplang/: App.java
app/src/main/java/net/rishvic/simplang/analysis/: ParseTable.java  Simplifications.java
app/src/main/java/net/rishvic/simplang/compiler/: Driver.java
app/src/test/java/net/rishvic/simplang/: AppTest.java
first-follows/: First-Follow1.csv  First-Follow4.csv
generated-c-code/: .gitignore  CMakeLists.txt  grammar.c
generated-c-code/grammar1/: grammar1.c  grammar1.l  grammar1.tab.c  grammar1.tab.h
generated-c-code/grammar1/samples/: input1.txt  input2.txt
generated-c-code/grammar2/: grammar2.c  grammar2.l  grammar2.tab.c  grammar2.tab.h
generated-c-code/grammar2/samples/: input1.txt  input2.txt
grammar-ll/: GrammarLL1.txt  GrammarLL4.txt
samples/: sample1.simp  sample2.simp  sample3.simp  sample4.simp  sample5.simp
